[project]
name = "hello-qkrtnqls1216"
version = "0.3.0"
description = ""
authors = [
    {name = "parksubeen", email = "qkrtnqls991216@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
